@@ -1,0 +1,6 @@
+Bare
+====
+
+.. productionlist::
+	A: `A` | somethingA
+	B: `B` | somethingB
