@@ -1,0 +1,5 @@
+Dup1
+====
+
+.. productionlist::
+	Dup: `Dup` | somethingDup
