@@ -1,0 +1,6 @@
+P1
+==
+
+.. productionlist:: P1
+	A: `A` | somethingA
+	B: `B` | somethingB
