@@ -1,0 +1,6 @@
+P2
+==
+
+.. productionlist:: P2
+	A: `A` | somethingA
+	B: `B` | somethingB
