@@ -1,0 +1,5 @@
+FirstLineRule
+=============
+
+.. productionlist:: FirstLine: something
+	SecondLine: somethingElse
